--- a/src/app/home/ui/navbar/navbar.component.html
+++ b/src/app/home/ui/navbar/navbar.component.html
@@ -8,6 +8,9 @@
     <div class="nav-item" routerLink="/about" routerLinkActive="active">
       About
     </div>
+    <div class="nav-item" routerLink="/dashboard" routerLinkActive="active" *ngIf="isLoggedIn$ | async">
+      Dashboard
+    </div>
   </div>
 
   <button
