--- a/src/app/auth/feature/login/login.component.html
+++ b/src/app/auth/feature/login/login.component.html
@@ -1,10 +1,18 @@
-<form class="bg-gray-800 rounded-2xl w-1/3 flex m-auto mt-10 flex-col gap-5 p-8 " [formGroup]="form" (ngSubmit)="onSubmit()">
+<h1 class="text-center text-2xl mt-10">
+  If u dont have account please
+  <a class="font-bold text-gray-700 cursor-pointer" [routerLink]="['../signup']">Sign Up</a>
+</h1>
+
+<form class="bg-gray-800 rounded-2xl w-1/3 flex m-auto mt-10 flex-col gap-5 p-8 " [formGroup]="form"
+      (ngSubmit)="onSubmit()">
 
   <app-input class="w-4/5 self-center" formControlName="login">Login</app-input>
+
+
   <app-input type="password" class="w-4/5 self-center" formControlName="password">Password</app-input>
 
-
-  <button type="submit" class="text-white bg-gray-700 w-min px-4 py-2 rounded-2xl self-end hover:bg-gray-600">Login</button>
+  <button type="submit" class="text-white bg-gray-700 w-min px-4 py-2 rounded-2xl self-end hover:bg-gray-600">Login
+  </button>
 </form>
 
 
