--- a/src/app/auth/feature/signup/signup.component.html
+++ b/src/app/auth/feature/signup/signup.component.html
@@ -3,7 +3,7 @@
   <a class="font-bold text-gray-700 cursor-pointer" [routerLink]="['../login']">Log In</a>
 </h1>
 
-<form class="bg-gray-800 rounded-2xl w-1/3 flex m-auto mt-10 flex-col gap-5 p-8 " [formGroup]="form"
+<form class="bg-gray-800 rounded-2xl w-1/3 flex m-auto mt-10 flex-col p-8 shadow-2xl" [formGroup]="form"
       (ngSubmit)="onSubmit()">
 
 
