--- a/src/app/auth/feature/login/login.component.html
+++ b/src/app/auth/feature/login/login.component.html
@@ -6,10 +6,16 @@
 <form class="bg-gray-800 rounded-2xl w-1/3 flex m-auto mt-10 flex-col gap-5 p-8 " [formGroup]="form"
       (ngSubmit)="onSubmit()">
 
-  <app-input class="w-4/5 self-center" formControlName="login">Login</app-input>
+  <app-input class="w-4/5 self-center" formControlName="login">
+    Login
+    <ng-container error *ngIf="login.dirty && login.getError('required')">Name cannot be empty!</ng-container>
+  </app-input>
 
 
-  <app-input type="password" class="w-4/5 self-center" formControlName="password">Password</app-input>
+  <app-input type="password" class="w-4/5 self-center" formControlName="password">
+    Password
+    <ng-container error *ngIf="password.dirty && password.getError('required')">Password cannot be empty!</ng-container>
+  </app-input>
 
   <button type="submit" class="text-white bg-gray-700 w-min px-4 py-2 rounded-2xl self-end hover:bg-gray-600">Login
   </button>
