--- a/src/app/auth/feature/login/login.component.html
+++ b/src/app/auth/feature/login/login.component.html
@@ -17,8 +17,11 @@
     <ng-container error *ngIf="password.dirty && password.getError('required')">Password cannot be empty!</ng-container>
   </app-input>
 
+  <p *ngIf="form.hasError('invalidCredentials')" class="text-red-600 self-center font-bold">Invalid login or password!</p>
+
   <button type="submit" class="text-white bg-gray-700 w-min px-4 py-2 rounded-2xl self-end hover:bg-gray-600">Login
   </button>
+
 </form>
 
 
