add password strength

--- a/src/app/auth/ui/input/input.component.scss
+++ b/src/app/auth/ui/input/input.component.scss
@@ -8,8 +8,8 @@
   }
 }
 
-:host.ng-invalid, :host.ng-valid {
-  label::after {
-    content: '*';
-  }
-}
+//:host.ng-invalid, :host.ng-valid {
+//  label::after {
+//    content: '*';
+//  }
+//}
