--- a/src/app/auth/feature/signup/signup.component.html
+++ b/src/app/auth/feature/signup/signup.component.html
@@ -22,13 +22,18 @@
 
 
   <app-input type="password" class="w-4/5 self-center" formControlName="password">Password
+    <app-password-strength [strength]="strength$ | async"></app-password-strength>
+
     <ng-container *ngIf="password.dirty && password.getError('required')" error>Passwords can not be empty</ng-container>
     <ng-container *ngIf="password.dirty && password.getError('minlength')" error>Passwords must be longer</ng-container>
   </app-input>
 
+
+
   <app-input type="password" class="w-4/5 self-center" formControlName="confirmPassword">Confirm password
     <ng-container *ngIf="confirmPassword.dirty && this.form.getError('notSame')" error>Passwords is not the same</ng-container>
   </app-input>
+
 
 
   <button type="submit" class="text-white bg-gray-700 w-min px-4 py-2 rounded-2xl self-end hover:bg-gray-600">Login
