--- a/src/app/auth/ui/input/input.component.html
+++ b/src/app/auth/ui/input/input.component.html
@@ -11,8 +11,11 @@
     class="absolute text-sm text-gray-500 dark:text-gray-400 duration-200 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">
     <ng-content></ng-content>
   </label>
-  <p id="standard_error_help" class="mt-2 text-xs text-red-600 dark:text-red-400 h-1 mb-6">
-    <ng-content select="[error]"></ng-content>
-  </p>
+
 
 </div>
+<ng-content select="app-password-strength"></ng-content>
+
+<p id="standard_error_help" class="mt-2 text-xs text-red-600 dark:text-red-400 h-1 mb-6">
+  <ng-content select="[error]"></ng-content>
+</p>
