--- a/src/app/dashboard/feature/dashboard/dashboard.component.html
+++ b/src/app/dashboard/feature/dashboard/dashboard.component.html
@@ -1,2 +1,24 @@
 <app-dash-nav></app-dash-nav>
-<p>dashboard works!</p>
+<div class="flex flex-col items-center mt-10">
+
+  <app-table [data]="personList">
+
+    <ng-template #headers>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>Age</th>
+      <th></th>
+    </ng-template>
+
+    <ng-template #rows let-row>
+      <td class="peer">{{row.firstname | titlecase}}</td>
+      <td class="peer">{{row.lastname | titlecase}}</td>
+      <td class="peer">{{row.age}}</td>
+      <td class="bg-gray-100 cursor-pointer peer-hover:bg-gray-400 hover:bg-gray-400" (click)="onEdit(toPerson(row))">
+        <button class="">Edit</button>
+      </td>
+    </ng-template>
+
+  </app-table>
+
+</div>
