add styles to button

--- a/src/app/dashboard/ui/person-edit-dialog/person-edit-dialog.component.html
+++ b/src/app/dashboard/ui/person-edit-dialog/person-edit-dialog.component.html
@@ -1,6 +1,6 @@
 <app-table [data]="[data]">
 
-  <ng-template #headers >
+  <ng-template #headers>
     <th>First Name</th>
     <th>Last Name</th>
     <th>Age</th>
@@ -19,5 +19,7 @@
   </ng-template>
 </app-table>
 
-<button (click)="onCancel()">Cancel</button>
-<button (click)="onApply()">Apply</button>
+<div class="bg-white flex justify-around h-8">
+  <button (click)="onCancel()">Cancel</button>
+  <button (click)="onApply()">Apply</button>
+</div>
