--- a/src/app/dashboard/feature/dashboard/dashboard.component.html
+++ b/src/app/dashboard/feature/dashboard/dashboard.component.html
@@ -1,8 +1,6 @@
 <app-dash-nav></app-dash-nav>
 <div class="flex flex-col items-center mt-10">
-
   <app-table [data]="personList">
-
     <ng-container *appTableHeader="personList">
       <th>First Name</th>
       <th>Last Name</th>
@@ -10,15 +8,16 @@
       <th></th>
     </ng-container>
 
-    <ng-container *appTableRow="personList; let row">
-      <td class="peer">{{row.firstname | titlecase}}</td>
-      <td class="peer">{{row.lastname | titlecase}}</td>
-      <td class="peer">{{row.age}}</td>
-      <td class="bg-gray-100 cursor-pointer peer-hover:bg-gray-400 hover:bg-gray-400" (click)="onEdit(row)">
+    <ng-container *appTableRow="personList as row">
+      <td class="peer">{{ row.firstname | titlecase }}</td>
+      <td class="peer">{{ row.lastname | titlecase }}</td>
+      <td class="peer">{{ row.age }}</td>
+      <td
+        class="bg-gray-100 cursor-pointer peer-hover:bg-gray-400 hover:bg-gray-400"
+        (click)="onEdit(row)"
+      >
         <button class="">Edit</button>
       </td>
     </ng-container>
-
   </app-table>
-
 </div>
