--- a/src/app/dashboard/ui/person-edit-dialog/person-edit-dialog.component.html
+++ b/src/app/dashboard/ui/person-edit-dialog/person-edit-dialog.component.html
@@ -1,20 +1,19 @@
 <app-table [data]="[data]">
-
-  <ng-template appTableHeader>
+  <ng-container *appTableHeader>
     <th>First Name</th>
     <th>Last Name</th>
     <th>Age</th>
-  </ng-template>
+  </ng-container>
 
   <ng-container *appTableRow="[data]">
     <td class="bg-white">
-      <input type="text" [formControl]="firstname">
+      <input type="text" [formControl]="firstname" />
     </td>
     <td class="bg-white">
-      <input type="text" [formControl]="lastname">
+      <input type="text" [formControl]="lastname" />
     </td>
     <td class="bg-white">
-      <input type="number" [formControl]="age">
+      <input type="number" [formControl]="age" />
     </td>
   </ng-container>
 </app-table>
