--- a/src/app/dashboard/ui/person-edit-dialog/person-edit-dialog.component.scss
+++ b/src/app/dashboard/ui/person-edit-dialog/person-edit-dialog.component.scss
@@ -1,7 +1,7 @@
 :host {
-  @apply bg-white
+  @apply bg-white;
 }
 
 button {
-  @apply w-1/2 hover:bg-gray-200 bg-white h-8
+  @apply w-1/2 hover:bg-gray-200 bg-white h-8;
 }
