add queryparam on edit

--- a/src/app/home/feature/home/home.component.html
+++ b/src/app/home/feature/home/home.component.html
@@ -1,2 +1,2 @@
 <h1 class="text-center font-bold text-5xl py-5">Great app please login</h1>
-<img src="https://cataas.com/cat/says/hello%20world!" class="m-auto h-[70vh]">
+<img src="https://cataas.com/cat/says/hello%20world!" class="m-auto h-[70vh]" />
