--- a/src/app/auth/feature/signup/signup.component.html
+++ b/src/app/auth/feature/signup/signup.component.html
@@ -1,43 +1,65 @@
 <h1 class="text-center text-2xl mt-10">
   If u have account please
-  <a class="font-bold text-gray-700 cursor-pointer" [routerLink]="['../login']">Log In</a>
+  <a class="font-bold text-gray-700 cursor-pointer" [routerLink]="['../login']"
+    >Log In</a
+  >
 </h1>
 
-<form class="bg-gray-800 rounded-2xl w-1/3 flex m-auto mt-10 flex-col p-8 shadow-2xl" [formGroup]="form"
-      (ngSubmit)="onSubmit()">
-
-
+<form
+  class="bg-gray-800 rounded-2xl w-1/3 flex m-auto mt-10 flex-col p-8 shadow-2xl"
+  [formGroup]="form"
+  (ngSubmit)="onSubmit()"
+>
   <app-input class="w-4/5 self-center" formControlName="login">
     Login
-  <ng-container error *ngIf="login.dirty && login.getError('required')">Name cannot be empty!</ng-container>
+    <ng-container error *ngIf="login.dirty && login.getError('required')"
+      >Name cannot be empty!</ng-container
+    >
   </app-input>
-
 
   <app-input type="email" class="w-4/5 self-center" formControlName="email">
     Email
-    <ng-container error *ngIf="email.dirty && email.getError('required')">Email cannot be empty!</ng-container>
-    <ng-container error *ngIf="email.dirty && email.getError('email')">Only proper email</ng-container>
+    <ng-container error *ngIf="email.dirty && email.getError('required')"
+      >Email cannot be empty!
+    </ng-container>
+    <ng-container error *ngIf="email.dirty && email.getError('email')"
+      >Only proper email</ng-container
+    >
   </app-input>
 
+  <app-input
+    type="password"
+    class="w-4/5 self-center"
+    formControlName="password"
+    >Password
+    <app-password-strength
+      [strength]="strength$ | async"
+    ></app-password-strength>
 
-
-  <app-input type="password" class="w-4/5 self-center" formControlName="password">Password
-    <app-password-strength [strength]="strength$ | async"></app-password-strength>
-
-    <ng-container *ngIf="password.dirty && password.getError('required')" error>Passwords can not be empty</ng-container>
-    <ng-container *ngIf="password.dirty && password.getError('minlength')" error>Passwords must be longer</ng-container>
+    <ng-container *ngIf="password.dirty && password.getError('required')" error
+      >Passwords can not be empty</ng-container
+    >
+    <ng-container *ngIf="password.dirty && password.getError('minlength')" error
+      >Passwords must be longer</ng-container
+    >
   </app-input>
 
-
-
-  <app-input type="password" class="w-4/5 self-center" formControlName="confirmPassword">Confirm password
-    <ng-container *ngIf="confirmPassword.dirty && this.form.getError('notSame')" error>Passwords is not the same</ng-container>
+  <app-input
+    type="password"
+    class="w-4/5 self-center"
+    formControlName="confirmPassword"
+    >Confirm password
+    <ng-container
+      *ngIf="confirmPassword.dirty && this.form.getError('notSame')"
+      error
+      >Passwords is not the same</ng-container
+    >
   </app-input>
 
-
-
-  <button type="submit" class="text-white bg-gray-700 w-min px-4 py-2 rounded-2xl self-end hover:bg-gray-600">Login
+  <button
+    type="submit"
+    class="text-white bg-gray-700 w-min px-4 py-2 rounded-2xl self-end hover:bg-gray-600"
+  >
+    Login
   </button>
 </form>
-
-
