--- a/src/app/home/ui/navbar/navbar.component.scss
+++ b/src/app/home/ui/navbar/navbar.component.scss
@@ -2,5 +2,5 @@
   @apply cursor-pointer bg-blue-900 py-2 px-4 rounded-2xl border-2 border-transparent;
 }
 .active {
-  @apply border-2 border-white
+  @apply border-2 border-white;
 }
