--- a/src/app/auth/ui/input/input.component.html
+++ b/src/app/auth/ui/input/input.component.html
@@ -1,21 +1,25 @@
 <div class="relative z-0">
-  <input [disabled]="disabled"
-         [value]="value"
-         #input
-         (keyup)="onChange(input.value)"
-         (focus)="onTouched()"
-         [type]="type"
-         class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
-         placeholder=" "/>
+  <input
+    [disabled]="disabled"
+    [value]="value"
+    #input
+    (keyup)="onChange(input.value)"
+    (focus)="onTouched()"
+    [type]="type"
+    class="block py-2.5 px-0 w-full text-sm text-gray-900 bg-transparent border-0 border-b-2 border-gray-300 appearance-none dark:text-white dark:border-gray-600 dark:focus:border-blue-500 focus:outline-none focus:ring-0 focus:border-blue-600 peer"
+    placeholder=" "
+  />
   <label
-    class="absolute text-sm text-gray-500 dark:text-gray-400 duration-200 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6">
+    class="absolute text-sm text-gray-500 dark:text-gray-400 duration-200 transform -translate-y-6 scale-75 top-3 -z-10 origin-[0] peer-focus:left-0 peer-focus:text-blue-600 peer-focus:dark:text-blue-500 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:scale-75 peer-focus:-translate-y-6"
+  >
     <ng-content></ng-content>
   </label>
-
-
 </div>
 <ng-content select="app-password-strength"></ng-content>
 
-<p id="standard_error_help" class="mt-2 text-xs text-red-600 dark:text-red-400 h-1 mb-6">
+<p
+  id="standard_error_help"
+  class="mt-2 text-xs text-red-600 dark:text-red-400 h-1 mb-6"
+>
   <ng-content select="[error]"></ng-content>
 </p>
