--- a/src/app/dashboard/feature/dashboard/dashboard.component.html
+++ b/src/app/dashboard/feature/dashboard/dashboard.component.html
@@ -1,4 +1,5 @@
 <app-dash-nav></app-dash-nav>
+
 <div class="flex flex-col items-center mt-10">
   <app-table [data]="personList">
     <ng-container *appTableHeader>
@@ -9,9 +10,15 @@
     </ng-container>
 
     <ng-container *appTableRow="personList; let row">
-      <td class="peer">{{ row.firstname }}</td>
-      <td class="peer">{{ row.lastname }}</td>
-      <td class="peer">{{ row.age }}</td>
+      <td class="peer">
+        {{ row.firstname }}
+      </td>
+      <td class="peer">
+        {{ row.lastname }}
+      </td>
+      <td class="peer">
+        {{ row.age }}
+      </td>
       <td
         class="bg-gray-100 cursor-pointer peer-hover:bg-gray-400 hover:bg-gray-400"
         (click)="onEdit(row)"
