--- a/src/app/dashboard/ui/table/table.component.scss
+++ b/src/app/dashboard/ui/table/table.component.scss
@@ -4,10 +4,11 @@
   }
 
   tbody tr {
-     @apply hover:bg-gray-200;
+    @apply hover:bg-gray-200;
   }
 
-  th, td {
-    @apply p-2
+  th,
+  td {
+    @apply p-2;
   }
 }
